change file tablet/delevering files

--- a/scss/tablet/_tablet.scss
+++ b/scss/tablet/_tablet.scss
@@ -1,6 +1,6 @@
 @import "header-t";
 @import "hero-t";
 @import "build-t";
-@import "delevering-t.scss";
+@import "delevering-t";
 @import "ready-t";
 @import "footer-t";
